# edna

./: Cargo.toml  README.md
src/: main.rs
src/cli/: config.rs  mod.rs  project_cli.rs  template_cli.rs
src/templates/: config.rs  mod.rs
