[package]
name = "edna"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["cargo"] }
console = "0.15.11"
dialoguer = { version = "0.11.0", features = ["password"] }
indicatif = "0.17.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
whoami = "1.6.0"
